--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Interactive Quiz</title>
 </head>
+
 <body>
     <h1>Welcome to the Quiz!</h1>
     <p>Test your knowledge about [Topic]!</p>
@@ -26,7 +28,7 @@
 
     <!-- Submit Button -->
     <button type="submit">Submit Quiz</button>
-</form>
+    </form>
 
 </body>
 </html>
